--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="#home">MyPortfolio</a>
+        <a href="#home">Net<span>Ops</span></a>
       </div>
       <div class="menu-toggle" id="mobile-menu">
         <span class="bar"></span>
@@ -34,7 +34,7 @@
   <!-- Home Section -->
   <section id="home">
     <div class="container">
-      <h1>Welcome to My Portfolio</h1>
+      <h1>I'm Palak</h1>
       <p>System Administrator | Network Specialist | Security Enthusiast</p>
       <a href="#projects" class="btn">View My Work</a>
       <a href="#contact" class="btn">Contact Me</a>
@@ -46,9 +46,8 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        ### About Palak
 
-Hi, I'm **Palak**, a dedicated **System Administrator** with a strong passion for optimizing IT systems and ensuring seamless operational efficiency. My expertise lies in managing **servers, networks, and security infrastructures**, with a focus on delivering reliable and secure solutions.
+Hi, I'm Palak, a dedicated System Administrator with a strong passion for optimizing IT systems and ensuring seamless operational efficiency. My expertise lies in managing **servers, networks, and security infrastructures**, with a focus on delivering reliable and secure solutions.
 
 I specialize in **Linux environments**, **cloud computing**, and **automation**, leveraging modern technologies to streamline processes and enhance system performance. With a proactive approach to problem-solving, I thrive on tackling challenges and implementing innovative strategies to keep systems running smoothly.
 
